@@ -261,6 +261,7 @@ wesnoth_sources = Split("""
     gui/widgets/listbox.cpp
     gui/widgets/menubar.cpp
     gui/widgets/minimap.cpp
+    gui/widgets/multi_page.cpp
     gui/widgets/panel.cpp
     gui/widgets/password_box.cpp
     gui/widgets/settings.cpp
