@@ -214,10 +214,6 @@ public:
 
 	twidget* build () const;
 
-	tscrollbar_container::tscrollbar_mode
-			vertical_scrollbar_mode,
-			horizontal_scrollbar_mode;
-
 	tbuilder_grid_ptr builder;
 
 	/**
